fix bug to overflow

--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -39,6 +39,7 @@
   flex: 2;
   width: 100%;
   margin-right: 1em;
+  overflow-x: scroll;
 }
 
 .name,
